--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,26 @@
-version: '3'
+version: '3.8'
 
 services:
-  sonarqube:
-    image: sonarqube:lts
+  db:
+    image: postgres:14
+    ports:
+      - '5433:5432'
+    environment:
+      POSTGRES_USER: 'postgres'
+      POSTGRES_PASSWORD: '139'
+      POSTGRES_DB: 'postgres'
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+  web:
+    build: .
+    command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8001"
+    volumes:
+      - .:/app
+    ports:
+      - '8001:8001'
     depends_on:
       - db
-    ports:
-      - "9000:9000"
-    environment:
-      SONAR_JDBC_URL: jdbc:postgresql://db:5432/sonarqube
-      SONAR_JDBC_USERNAME: sonar
-      SONAR_JDBC_PASSWORD: sonar
-    networks:
-      - sonarnet
 
-  db:
-    image: postgres:12
-    environment:
-      POSTGRES_USER: sonar
-      POSTGRES_PASSWORD: sonar
-      POSTGRES_DB: sonarqube
-    networks:
-      - sonarnet
 
-networks:
-  sonarnet:
+volumes:
+  postgres_data:
